@@ -1,3 +1,7 @@
+2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Components/TabLabel.cs: Reuse the button close image.
+
 2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Components.Commands.ExtensionNodes/SchemeExtensionNode.cs,
